Update OpenAPI errors and regenerate stubs
